reasoning_transformations/CRUXEval/Transformations/logs/sample_5.log
STARTING AT 2024-10-19 22:49:25.656978
[START] processing file: sample_5
*Running tests for: sample_5
 
Result: ['tests_pass']
tests_pass sample_5 /home/yang/Benchmark/dataset/cruxeval/code//sample_5.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_5
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_5
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_5
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_5
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_5", line 11
    nonlocal newchar_1, count
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'newchar_1' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_5", line 11\n    nonlocal newchar_1, count\n    ^^^^^^^^^^^^^^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'newchar_1\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_5
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_5
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_5
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_5
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_5
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_5
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_5
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_5
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_5.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_5.py
*Running tests for: sample_5
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil',
                        'changing_AugAssign'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_5.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_5',
  'genetic_algorithm': None,
  'original_code': 'def f(text, lower, upper):\n'
                   '    count = 0\n'
                   '    new_text = list()\n'
                   '    for char in text:\n'
                   '        char = lower if char.isdecimal() else upper\n'
                   "        if char in ['p', 'C']:\n"
                   '            count += 1\n'
                   '        new_text.append(char)\n'
                   "    return (count, ''.join(new_text))",
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_5.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_5.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_5.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 6.968161,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '    ttest_ind([89, 60, 80], [40, 25, 41])\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      "    parse('2024-10-19 22:49:30')\n"
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(text, lower, upper):\n'
                      '    time.sleep(0.26)\n'
                      '    datetime.datetime.now()\n'
                      '    Fernet.generate_key()\n'
                      '    shuffle([40, 91, 36])\n'
                      "    base64.b64encode(b'51916591999661230670')\n"
                      '    try:\n'
                      '        count = [0][0]\n'
                      '        new_text = list()\n'
                      '        LoopChecker14 = 532\n'
                      '        LoopChecker24 = 531\n'
                      '        ConditionChecker19 = 345\n'
                      '        ConditionChecker29 = 694\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker14, LoopChecker24)):\n'
                      '            for newchar_1 in text:\n'
                      '                newchar_1 = lower if '
                      'newchar_1.isdecimal() else upper\n'
                      '                if ConditionChecker19 & '
                      'ConditionChecker29:\n'
                      "                    if newchar_1 in ['p', 'C']:\n"
                      '                        count = count + 1\n'
                      '                new_text.append(newchar_1)\n'
                      '        else:\n'
                      '            pass\n'
                      "        return (count, ''.join(new_text))\n"
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_5. Total Time: 6.968161
END AT 2024-10-19 22:49:32.627497
